kubernetes/apps/uptime-kuma/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: apps
spec:
  selector:
    app: uptime-kuma
  ports:
    - name: http
      port: 80
      targetPort: 3001
